# rosetta

./: .gitignore  rosetta.cabal  stack.yaml
src/: ABCProblem.hs  ABCWords.hs  ASKPrimes.hs  ASearchAlgorithm.hs  AVLTree.hs  Abbreviation.hs  AbbreviationEasy.hs  AbbreviationSimple.hs  Abelian.hs  Abundant.hs  Accumulator.hs  Ackermann.hs  ActiveObject.hs  AdditionChains.hs  AdditionChainsExponentiation.hs  AdditivePrimes.hs  AlgebraicData.hs  AlignColumns.hs  AliquotSeq.hs  AlmkvistGiullera.hs  AlmostPrimes.hs  AmicablePairs.hs  Anagrams.hs  AngleBetweenTwoBear.hs  AnglesGeomoetric.hs  AnimatePendulum.hs  AntiPrimes.hs  ArchimedeanSpiral.hs  ArithmeticEvaluation.hs  AsciiDiagram.hs  AtomicUpdates.hs  AverageLoopLength.hs  AverageMedian.hs  AveragesMode.hs  DerangedAnagrams.hs  FifthPuzzleGame.hs  FourRingsSquaresPuzzle.hs  Main.hs  NineBillonNamesGod.hs  NineNineBottleOfBeer.hs  (+8 more)
src/AClass/: ABCProblem.hs  ABCWords.hs  ASKPrimes.hs  ASearchAlgorithm.hs  AVLTree.hs  Abbreviation.hs  AbbreviationEasy.hs  AbbreviationSimple.hs  Abelian.hs  Abundant.hs  Accumulator.hs  Ackermann.hs  ActiveObject.hs  AdditionChains.hs  AdditionChainsExponentiation.hs  AdditivePrimes.hs  AlgebraicData.hs  AlignColumns.hs  AliquotSeq.hs  AlmkvistGiullera.hs  AlmostPrimes.hs  AmicablePairs.hs  Anagrams.hs  AngleBetweenTwoBear.hs  AnglesGeomoetric.hs  AnimatePendulum.hs  AntiPrimes.hs  ArchimedeanSpiral.hs  ArithmeticEvaluation.hs  AsciiDiagram.hs  AtomicUpdates.hs  AverageLoopLength.hs  AverageMedian.hs  AveragesMode.hs  DerangedAnagrams.hs  FifthPuzzleGame.hs  FourRingsSquaresPuzzle.hs  NineBillonNamesGod.hs  NineNineBottleOfBeer.hs  PythagoreanMean.hs  (+7 more)
src/BClass/: BaconCipher.hs  BalanceBrackets.hs  BalancedTenary.hs  BarnsleyFern.hs  Base16Number.hs  BellNumber.hs  BenfordLow.hs  Bernoullis.hs  BestShuffle.hs  BinGivenLimits.hs  BinSearch.hs  BioInformatics.hs  BitMap.hs  BlanceTernary.hs
