Name:                rosetta
Version:             1.1.2
License:             GPL
License-file:        LICENSE
Synopsis:            List of the rosetta code
Description:         List of all the haskell language of the rosetta
Category:            Game
Author:              daixfnwpu 
Maintainer:          daixfnwpu@gmail.com
Homepage:            http://haskell.org/haskellwiki/rosetta
Build-Type:          Simple
Cabal-Version:       >= 1.2
data-files:
      README.md
     ,data/weekDayNames.txt

Executable rosetta
   Main-is:        Main.hs
   Build-Depends:  base==4.*
                 , array
                 , mtl
                 , deepseq
                 , hashtables
                 , random
                 , random-fu
                 , lens
                 , ansi-terminal
                 , template-haskell
                 , containers
               --  , diagrams==1.4.0.1
   Hs-source-dirs: src
   Ghc-options:    -O2 -funbox-strict-fields -optc-O2
   Extensions:     BangPatterns
                 , FunctionalDependencies
                 , FlexibleInstances
                 , MultiParamTypeClasses
                 , TypeOperators
                 , Rank2Types
   other-modules:  ThroundDoors
                 , ThroundPrisoners
                 , FifthPuzzleGame
                 , TwoZeroFourEightGame
                 , TwentityGame
                 , TwentityFour
                 , TwentitySolveGame
                 , FourRingsSquaresPuzzle
                 , NineBillonNamesGod
                 , NineNineBottleOfBeer
                 , ASearchAlgorithm
                 , Abbreviation
                 , AbbreviationEasy
                 , AbbreviationSimple
                 , ABCProblem
                 , ABCWords
                 , Abelian
                 
