Name:                rosetta
Version:             1.1.2
License:             GPL
License-file:        LICENSE
Synopsis:            List of the rosetta code
Description:         List of all the haskell language of the rosetta
Category:            Game
Author:              daixfnwpu 
Maintainer:          daixfnwpu@gmail.com
Homepage:            http://haskell.org/haskellwiki/rosetta
Build-Type:          Simple
Cabal-Version:       >= 1.2
data-files:
      README.md
     ,data/weekDayNames.txt

Executable rosetta
   Main-is:        Main.hs
   Build-Depends:  base
                 , array
                 , mtl
                 , deepseq
                 , hashtables
                 , random
                 , random-fu
                 , lens
                 , ansi-terminal
                 , template-haskell
                 , containers
                 , time
                 , numbers
                 , gloss
                 , parsec
                 , split
                 , vector
               --  , diagrams==1.4.0.1
   Hs-source-dirs: src
   Ghc-options:    -O2 -funbox-strict-fields -optc-O2
   Extensions:     BangPatterns
                 , FunctionalDependencies
                 , FlexibleInstances
                 , MultiParamTypeClasses
                 , TypeOperators
                 , Rank2Types
   other-modules:  AClass.ThroundDoors
                  ,AClass.ThroundPrisoners
                  ,AClass.FifthPuzzleGame
                  ,AClass.TwoZeroFourEightGame
                  ,AClass.TwentityGame
                  ,AClass.TwentityFour
                  ,AClass.TwentitySolveGame
                  ,AClass.FourRingsSquaresPuzzle
                  ,AClass.NineBillonNamesGod
                  ,AClass.NineNineBottleOfBeer
                  ,AClass.ASearchAlgorithm
                  ,AClass.Abbreviation
                  ,AClass.AbbreviationEasy
                  ,AClass.AbbreviationSimple
                  ,AClass.ABCProblem
                  ,AClass.ABCWords
                  ,AClass.Abelian
                  ,AClass.Abundant
                  ,AClass.Accumulator
                  ,AClass.Ackermann
                  ,AClass.ActiveObject
                  ,AClass.AdditionChains
                  ,AClass.AdditionChainsExponentiation
                  ,AClass.AdditivePrimes
                  ,AClass.ASKPrimes
                  ,AClass.AlgebraicData
                  ,AClass.AlignColumns
                  ,AClass.AliquotSeq
                  ,AClass.AlmkvistGiullera
                  ,AClass.AlmostPrimes
                  ,AClass.AmicablePairs
                  ,AClass.Anagrams
                  ,AClass.DerangedAnagrams
                  ,AClass.AngleBetweenTwoBear
                  ,AClass.AnglesGeomoetric
                  ,AClass.AnimatePendulum
                  ,AClass.AntiPrimes
                  ,AClass.AVLTree
                  ,AClass.ArchimedeanSpiral
                  ,AClass.ArithmeticEvaluation
                  ,AClass.AsciiDiagram
                  ,AClass.AtomicUpdates
                  ,AClass.AverageLoopLength
                  ,AClass.AverageMedian
                  ,AClass.AveragesMode
                  ,AClass.PythagoreanMean
                  ,AClass.SimpleMovingAverage
                  ,BClass.BaconCipher
                  ,BClass.BalanceBrackets
                  ,BClass.BlanceTernary
                 
